--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#7E0000</color>
+    <color name="background">#191720</color>
+    <color name="spinner_text_color">#CC0000</color>
+
 </resources>
