Club and Event Fragments

--- a/app/src/main/res/layout/fragment_register1.xml
+++ b/app/src/main/res/layout/fragment_register1.xml
@@ -45,7 +45,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -81,7 +82,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -117,7 +119,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -155,7 +158,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -193,7 +197,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
