--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/home" />
 
     <item
-        android:id="@+id/recyclerFragment"
+        android:id="@+id/clubFragment"
         android:icon="@drawable/child_selector2"
         android:title="@string/clubs" />
 
