--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,7 +75,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -113,7 +114,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
         </com.google.android.material.textfield.TextInputLayout>
