--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_grapgh"
-    app:startDestination="@id/recyclerFragment">
+    app:startDestination="@id/clubFragment">
 
     <fragment
         android:id="@+id/newsFragment"
@@ -11,29 +11,39 @@
         android:label="fragment_news"
         tools:layout="@layout/fragment_quiz" />
     <fragment
-        android:id="@+id/recyclerFragment"
+        android:id="@+id/clubFragment"
         android:name="az.sharif.maintask.view.main.fragments.ClubsFragment"
         android:label="fragment_recycler"
         tools:layout="@layout/fragment_clubs" >
         <action
-            android:id="@+id/recycler_to_news"
-            app:destination="@id/newsFragment" />
-        <action
-            android:id="@+id/recycler_to_empty"
-            app:destination="@id/emptyFragment" />
+            android:id="@+id/clubToSimple"
+            app:destination="@id/simpleClubFragment" />
     </fragment>
     <fragment
         android:id="@+id/emptyFragment"
         android:name="az.sharif.maintask.view.main.fragments.HomeFragment"
         android:label="fragment_empty"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/empty_to_recycler"
-            app:destination="@id/recyclerFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="az.sharif.maintask.view.main.fragments.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/realClubFragment"
+        android:name="az.sharif.maintask.view.RealClubFragment"
+        android:label="RealClubFragment" >
+        <action
+            android:id="@+id/real_to_simple"
+            app:destination="@id/simpleClubFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/realEventFragment"
+        android:name="az.sharif.maintask.view.RealEventFragment"
+        android:label="RealEventFragment" />
+    <fragment
+        android:id="@+id/simpleClubFragment"
+        android:name="az.sharif.maintask.view.SimpleClubFragment"
+        android:label="fragment_simple_club"
+        tools:layout="@layout/fragment_simple_club" />
 </navigation>
