--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#A8A8A8</color>
     <color name="red">#7E0000</color>
     <color name="background">#191720</color>
     <color name="spinner_text_color">#CC0000</color>
-
+    <color name="blur">#90caf9</color>
 </resources>
