--- a/app/src/main/res/drawable/tab_indicator.xml
+++ b/app/src/main/res/drawable/tab_indicator.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#7CFED0" />
+    <solid android:color="#13616E" />
     <corners
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp" />
