--- a/app/src/main/res/layout/exam_layout.xml
+++ b/app/src/main/res/layout/exam_layout.xml
@@ -12,26 +12,26 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1e1c24">
+        android:background="@color/white">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="130dp"
-            android:layout_height="85dp"
-            android:layout_margin="20dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
             android:elevation="5dp"
-            app:cardCornerRadius="13dp"
+            app:cardCornerRadius="500dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="130dp"
-                android:layout_height="85dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:contentDescription="@string/todo"
                 android:scaleType="centerCrop"
-                android:src="@drawable/music" />
+                android:src="@drawable/exam_background2" />
 
         </androidx.cardview.widget.CardView>
 
@@ -40,9 +40,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/android"
-            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:text="@string/suni"
+            android:textColor="@color/background"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@id/cardView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,37 +52,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="@string/club"
-            android:textColor="@color/gray"
+            android:text="@string/beu"
+            android:textColor="#56545A"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/cardView"
             app:layout_constraintTop_toBottomOf="@id/itemName" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:numStars="1"
-            android:progressBackgroundTint="@color/black"
-            android:progressTint="#DDC003"
-            android:rating="3"
-            android:secondaryProgressTint="@color/white"
-            app:layout_constraintBottom_toBottomOf="@id/rate"
-            app:layout_constraintEnd_toEndOf="@id/rate" />
-
         <TextView
-            android:id="@+id/rate"
+            android:id="@+id/count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="14dp"
             android:text="@string/_4"
-            android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textColor="@color/background"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:drawablePadding="4dp"
+            app:drawableStartCompat="@drawable/baseline_number"
+            app:drawableTint="@color/background" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
