--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/emptyFragment"
+        android:id="@+id/mainFragment"
         android:icon="@drawable/child_selector"
         android:title="@string/home" />
 
@@ -12,7 +12,7 @@
         android:title="@string/clubs" />
 
     <item
-        android:id="@+id/newsFragment"
+        android:id="@+id/quizFragment"
         android:icon="@drawable/child_selector3"
         android:title="@string/quiz" />
 
